# Hackathon

ChatGPT-Console-App/: README.tct  index-react.html  index.html  ingest_rag.py  main.py  requirements.txt  server.py  startup.bat
ChatGPT-Console-App/SharepointFiles/Grainger/Grainger PLC - Project Documents/: Environment Refresh strategy.xlsx  Salesforce - HomeLet Integration Specification v0.1 to be delete.docx  Terms and Conditions - OpenBox.docx  _DOC_151399544(2)_Short Form Terms and Conditions.docx  (+1 more)
ChatGPT-Console-App/history/: chat_20251202-154340.json  chat_20251202-154643.json  chat_20251202-154643.title.txt  chat_20251202-155209.json  chat_20251202-155209.title.txt  chat_20251202-160643.json  chat_20251202-160643.title.txt  chat_20251202-164220.json  chat_20251202-164220.title.txt  chat_20251202-164253.json  chat_20251202-164253.title.txt  chat_20251202-164847.json  chat_20251202-164847.title.txt  chat_20251204-120715.title.txt  chat_20251204-121018.json  chat_20251204-121018.title.txt  chat_20251204-121442.json  chat_20251204-121442.title.txt
sharepoint-qa-cli/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
sharepoint-qa-cli/src/: cli.py  config.py  main.py  openai_client.py  utils.py
sharepoint-qa-cli/src/db/: client.py  models.py
sharepoint-qa-cli/src/embeddings/: generator.py
sharepoint-qa-cli/src/retriever/: retriever.py
sharepoint-qa-cli/src/sharepoint/: auth.py  extractor.py
sharepoint-qa-cli/src/vectorstore/: qdrant_client.py
sharepoint-qa-cli/tests/: test_db.py  test_embeddings.py  test_sharepoint.py
(+1057 files in other folders)
